--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <i class="icon-unmute fas fa-volume-up"></i>
           <i class="icon-mute fas fa-volume-mute"></i>
         </div>
-        <input class="volume" type="range" value="50" step="1" min="0" max="100">
+        <input class="volume" type="range" value="" step="1" min="0" max="100">
         <p class="value"></p>
       </div>
 
